--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Создать QR-код</title>
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1>QR Code Generator</h1>
-      <p>Type a url or text to generate QR Code</p>
+      <h1>Генератор QR-кодов</h1>
+      <p>Введите ссылку или текст для создания QR-кода</p>
     </div>
     <div class="input-form">
       <input type="text" class="qr-input" placeholder="Enter url or text">
-      <button class="generate-btn">Generate QR Code</button>
+      <button class="generate-btn">Создать QR-код</button>
     </div>
     <div class="qr-code">
       <img src="images/qrcode.png" class="qr-image">
