--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         qrImg.src = "https://api.qrserver.com/v1/create-qr-code/?size=170x170&data="+qrInput.value;
         qrImg.onload = function () {
           container.classList.add("active");
-          generateBtn.innerText = "Generate QR Code";
+          generateBtn.innerText = "Создать QR-код";
         }
       }
     }
