--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     generateBtn.onclick = function () {      
       if(qrInput.value.length > 0){ 
-        generateBtn.innerText = "Generating QR Code..."       
+        generateBtn.innerText = "Создать QR-код..."       
         qrImg.src = "https://api.qrserver.com/v1/create-qr-code/?size=170x170&data="+qrInput.value;
         qrImg.onload = function () {
           container.classList.add("active");
