--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Введите ссылку или текст для создания QR-кода</p>
     </div>
     <div class="input-form">
-      <input type="text" class="qr-input" placeholder="ВВедите ссылку или текст">
+      <input type="text" class="qr-input" placeholder="Введите ссылку или текст">
       <button class="generate-btn">Создать QR-код</button>
     </div>
     <div class="qr-code">
